<resources>
    <string name="app_name">HW04</string>
    <string name="GID">a056fcc0c8bc3a7c110e16138b19a305</string>
    <string name="Delete_Api">http://dev.theappsdr.com/apis/trivia_fall15/deleteAll.php</string>
    <string name="Upload_Api">http://dev.theappsdr.com/apis/trivia_fall15/uploadPhoto.php</string>
    <string name="Save_Api">http://dev.theappsdr.com/apis/trivia_fall15/saveNew.php</string>
    <string name="Get_All_Api">http://dev.theappsdr.com/apis/trivia_fall15/getAll.php</string>
    <string name="Check_Api">http://dev.theappsdr.com/apis/trivia_fall15/checkAnswer.php</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>

    <string name="yes">Yes</string>
    <string name="no">No</string>

    <string name="welcome">Welcome to Trivia App</string>
    <string name="start_label">Start Trivia</string>
    <string name="create_question_label">Create Quiz Question</string>
    <string name="delete_all_label">Delete All My Questions</string>
    <string name="exit_label">Exit</string>
    <string name="delete_alert_title">Delete Questions</string>
    <string name="delete_alert_message">Are you sure you want to delete all your questions?</string>
    <string name="progress_title">Deleting Questions</string>
    <string name="progress_message">Deleting &#8230;</string>
    <string name="delete_error">Error deleting your questions.</string>
    <string name="title_activity_create_question">CreateQuestion</string>
    <string name="options_error">Cannot have more than 7 options or less than 2</string>
    <string name="checked_error">You must select an answer</string>
    <string name="null_question_error">Cannot have a question with no text</string>
    <string name="select_image_label">Select Image</string>
    <string name="question_hint">Type question here</string>
    <string name="answer_hint">Type option here</string>
    <string name="plus">+</string>
    <string name="submit">Submit</string>
    <string name="image_upload_error">Error uploading image</string>
    <string name="posting_image_title">Posting Image</string>
    <string name="posting_image_mess">Posting &#8230;</string>
    <string name="posting_q_title">Posting Question</string>
    <string name="posting_q_mess">Posting &#8230;</string>
    <string name="question_post_error">Error posting new question</string>
    <string name="title_activity_trivia">Trivia</string>
    <string name="quit">Quit</string>
    <string name="next">Next</string>
    <string name="loading_q_title">Loading Questions</string>
    <string name="loading_q_mess">Loading &#8230;</string>
    <string name="selction_error">Please select an answer</string>
    <string name="checking_title">Checking Answer</string>
    <string name="checking_mess">Checking &#8230;</string>
    <string name="wrong">Incorrect!</string>
    <string name="right">Correct!</string>
    <string name="title_activity_result">Result</string>
    <string name="result_title">Trivia Results</string>
    <string name="correct_answers">Correct Answers</string>
    <string name="do_better">Try again and see if you can get all the right answers.</string>
    <string name="all_right">Congratulations, you got them all right!</string>
    <string name="try_again">Try Again</string>
</resources>
