<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="horizontal"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity">

    <RelativeLayout
        android:layout_width="0sp"
        android:layout_height="fill_parent"
        android:layout_weight=".15">
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="0sp"
        android:layout_height="fill_parent"
        android:layout_weight=".7">
        
        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:id="@+id/textWelcome"
                android:text="@string/welcome"
                android:textSize="32sp"
                android:textColor="#000000"
                android:textStyle="bold"
                android:gravity="center" />

            <Button
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="40sp"
                android:id="@+id/buttonStart"
                android:text="@string/start_label"
                android:textSize="16sp"
                android:textStyle="bold"/>
            <Button
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10sp"
                android:id="@+id/buttonCreate"
                android:text="@string/create_question_label"
                android:textSize="16sp"
                android:textStyle="bold"/>
            <Button
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10sp"
                android:id="@+id/buttonDelete"
                android:text="@string/delete_all_label"
                android:textStyle="bold"
                android:textSize="16sp"/>
            <Button
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10sp"
                android:id="@+id/buttonExit"
                android:text="@string/exit_label"
                android:textStyle="bold"
                android:textSize="16sp"/>

        </LinearLayout>
        
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="0sp"
        android:layout_height="fill_parent"
        android:layout_weight=".15">
    </RelativeLayout>
</LinearLayout>
