<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context="com.sam.hw04.Result">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:text="@string/result_title"
        android:id="@+id/result_title"
        android:textSize="28sp"
        android:textColor="#000000"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/correct_answers"
        android:id="@+id/answers_label"
        android:layout_below="@id/result_title"
        android:layout_marginTop="20sp"
        android:textSize="22sp"
        android:textColor="#000000"/>


    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_below="@id/answers_label"
        android:id="@+id/result_box"
        android:layout_marginTop="10sp"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:minWidth="50sp"
            android:textColor="#00FF00"
            android:id="@+id/percent"
            android:textSize="22sp" />

        <SeekBar
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:max="100"
            android:id="@+id/pb"
            android:layout_toEndOf="@id/percent"
            android:layout_alignParentEnd="true" />

    </RelativeLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50sp"
        android:id="@+id/result_message"
        android:layout_below="@id/result_box"
        android:textSize="22sp"
        android:gravity="center"
        android:layout_centerHorizontal="true"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/quitResults"
        android:text="@string/quit"
        android:layout_alignParentBottom="true"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/try_again"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:text="@string/try_again"/>
</RelativeLayout>
